--- a/src/journey-maps/angular/style/_functions.scss
+++ b/src/journey-maps/angular/style/_functions.scss
@@ -63,10 +63,17 @@
       }
     }
   }
+
+  @media (forced-colors: active) {
+    .map-control-container {
+      /* Tell Windows not to change styles for this component */
+      forced-color-adjust: none;
+    }
+  }
 }
 
 @mixin _map-control-button-wrapper-active {
-  background-color: #212121;
+  background-color: esta.$sbbColorCharcoal;
   background-clip: content-box;
 
   .map-control-button {
@@ -76,7 +83,7 @@
 
 @mixin map-control-icon-button($icon) {
   .map-control-button {
-    background-color: #212121;
+    background-color: esta.$sbbColorCharcoal;
     cursor: pointer;
     height: 36px;
     pointer-events: auto;
